add baseline data and rm toList()